added stripe form

--- a/projects/stripe-elements-example/src/app/app.component.html
+++ b/projects/stripe-elements-example/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div style="max-width: 500px;">
-    <ngrx-stripe-elements></ngrx-stripe-elements>
+    <ngrx-stripe-form></ngrx-stripe-form>
 </div>
 <div style="max-width: 400px;">
-    <ngrx-stripe-elements></ngrx-stripe-elements>
+    <ngrx-stripe-form></ngrx-stripe-form>
 </div>
 <div style="max-width: 300px;">
-    <ngrx-stripe-elements></ngrx-stripe-elements>
+    <ngrx-stripe-form></ngrx-stripe-form>
 </div>
 <ngrx-stripe-form></ngrx-stripe-form>
