--- a/projects/stripe-elements/src/lib/stripe-form/stripe-form.component.html
+++ b/projects/stripe-elements/src/lib/stripe-form/stripe-form.component.html
@@ -1,4 +1,4 @@
-<form class="checkout" (ngSubmit)="onSubmit()">
+<form class="checkout">
     <div #paymentRequestButtonRef></div>
     <div class="form-row">
         <label for="card-info">Card number</label>
@@ -25,7 +25,7 @@
     <div class="alert" *ngIf="cardCvcError">{{cardCvcError.message}}</div>
     <div class="alert" *ngIf="cardExpiryError">{{cardExpiryError.message}}</div>
 
-    <button [disabled]="cardNumberError || cardCvcError || cardExpiryError" type="submit">{{payButtonText}}</button>
+    <button [disabled]="cardNumberError || cardCvcError || cardExpiryError" type="submit" (click)="pay()">{{payButtonText}}</button>
 </form>
 
 
